--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.18",
     "axios": "^1.2.0",
+    "laravel-vue-pagination": "^4.1.0",
     "pinia": "^2.0.25",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6"
